# artisan-herolab

./: .gitignore  Cargo.toml  DESIGN.md  ENTITY_TYPE_TEST_MATRIX.md  SEMANTIC_INVENTORY.txt  TOKEN_INVENTORY.txt
src/: error.rs  lib.rs  loader.rs
tests/: portfolio_archive.rs  semantic_roundtrip.rs  user_catalog.rs
tests/fixtures/herolab/: manifest.toml
